--- a/src/views/work/team/team.html
+++ b/src/views/work/team/team.html
@@ -1,13 +1,11 @@
-{% extends "_layout.html" %}
+{% extends "../_layout.html" %}
 
 {% block head_extend %}
 {% endblock %}
 
-{% block title %}
-	ShellHong.团队大纲
-{% endblock %}
-
 {% block content %}
+<h1>团队概要</h1>
+
 <h2>人才梯队</h2>
 
 <ul>
