--- a/src/views/work/_layout.html
+++ b/src/views/work/_layout.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../css/common/font.css" type="text/css">
-    <link rel="stylesheet" href="../css/common/style.css" media="screen" type="text/css">
-    <link rel="stylesheet" href="../css/common/print.css" media="print" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/font.css" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/style.css" media="screen" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/print.css" media="print" type="text/css">
     {% block head_extend %}{% endblock %}
     <title>ShellHong's Blog</title>
   </head>
