--- a/src/views/work/_layout.html
+++ b/src/views/work/_layout.html
@@ -14,7 +14,7 @@
     <header>
       <div class="inner">
         <a href="https://blog.shellhong.com">
-          <h1>ShellHong's Blog</h1>
+          <h1>ShellHong Blog</h1>
         </a>
         <h2></h2>
           <a href="mailto:shellhong6@gmail.com" class="button">Send emails to me</a>
@@ -31,8 +31,8 @@
         </section>
 
         <aside id="sidebar">
-          <p><a href="https://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
-          <p><a href="https://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
+          <p><a href="http://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
+          <p><a href="http://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
         </aside>
 
       </div>
