--- a/src/views/life_nav.html
+++ b/src/views/life_nav.html
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block content %}
-  <h1 id="test">test</h1>
-  <p>hello</p>
+  <h1>hello</h1>
+  <p>hello world!</p>
 {% endblock %}
 
 {% block footer_extend %}
