--- a/src/views/work_nav.html
+++ b/src/views/work_nav.html
@@ -4,7 +4,12 @@
 {% endblock %}
 
 {% block content %}
-  <h1 id="test">test</h1>
+  <h3>
+  	<a href="work/team/index.html">团队纲要</a>
+		<p>
+			团队管理与发展的大体纲要和一些感悟
+		</p>
+  </h3>
   <p>hello</p>
 {% endblock %}
 
