--- a/src/views/work_nav.html
+++ b/src/views/work_nav.html
@@ -4,13 +4,14 @@
 {% endblock %}
 
 {% block content %}
-  <h3>
-  	<a href="work/team/index.html">团队纲要</a>
+	<div>
+		<h3>
+	  	<a href="work/team/index.html">团队纲要</a>
+	  </h3>
 		<p>
 			团队管理与发展的大体纲要和一些感悟
 		</p>
-  </h3>
-  <p>hello</p>
+	</div>
 {% endblock %}
 
 {% block footer_extend %}
