add git flow and dev flow

--- a/src/views/work/team/index.html
+++ b/src/views/work/team/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>团队纲要</h1>
+<h1>团队概要</h1>
 
 <h2>人才梯队</h2>
 
@@ -68,9 +68,11 @@
 <li>在这些领域可以随心发散</li>
 <li>但是，时间和精力有限，不要化太多时间，去学习昙花一现的所以牛逼的新技术</li></ul></li></ul></li>
 <li>流程统一
-<ul><li>git分支使用流程</li>
+<ul><li>git分支使用流程
+<img src="../../../images/work/team/git-mult-branch.png" alt="流程图" title="" /></li>
 <li>项目提测与发布流程</li>
-<li>多方合作联合开发流程</li></ul></li>
+<li>多方合作联合开发流程
+<img src="../../../images/work/team/dev-flow.png" alt="流程图" title="" /></li></ul></li>
 </ul>
 
 <h2>生态完善</h2>
@@ -118,7 +120,7 @@
 
 <ul>
 <li>症状
-<ul><li>同等能力下，加班多产出少 </li>
+<ul><li>同等能力下，加班多产出少</li>
 <li>完成任务，质量未知（代码质量、需求还原度等）</li></ul></li>
 <li>如何避免
 <ul><li>结果导向</li>
