--- a/src/views/_layout.html
+++ b/src/views/_layout.html
@@ -16,8 +16,7 @@
         <a href="https://blog.shellhong.com">
           <h1>ShellHong Blog</h1>
         </a>
-        <h2></h2>
-          <a href="mailto:shellhong6@gmail.com" class="button">Send emails to me</a>
+        <a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a>
       </div>
     </header>
 
