--- a/src/views/work_nav.html
+++ b/src/views/work_nav.html
@@ -1,13 +1,18 @@
 {% extends "_layout.html" %}
 
 {% block head_extend %}
+	<style media="screen">
+		.item_title{
+			font-size: 18px;
+		}
+	</style>
 {% endblock %}
 
 {% block content %}
 	<div>
-		<h3>
-	  	<a href="work/team/index.html">团队纲要</a>
-	  </h3>
+		<h6>
+	  	<a class='item_title' href="work/team/index.html">团队纲要</a>
+	  </h6>
 		<p>
 			团队管理与发展的大体纲要和一些感悟
 		</p>
