--- a/src/views/life_nav.html
+++ b/src/views/life_nav.html
@@ -1,11 +1,18 @@
 {% extends "_layout.html" %}
 
 {% block head_extend %}
+<style media="screen">
+  .item_title{
+    font-size: 18px;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
-  <h1>hello</h1>
-  <p>hello world!</p>
+  <a class='item_title' href="work/team/index.html">团队纲要</a>
+  <p>
+    团队管理与发展的大体纲要和一些感悟
+  </p>
 {% endblock %}
 
 {% block footer_extend %}
