--- a/src/views/work_nav.html
+++ b/src/views/work_nav.html
@@ -13,7 +13,7 @@
 		<p>
 			团队管理与发展的大体纲要和一些感悟
 		</p>
-	  <a class='item_title' href="work/team/index.html">关于缓存</a>
+	  <a class='item_title' href="work/cache/index.html">关于缓存</a>
 		<p>
 			讲述现阶段常用的几个缓存方案以及一些技术要点
 		</p>
