--- a/src/views/work_nav.html
+++ b/src/views/work_nav.html
@@ -12,10 +12,12 @@
 	  <a class='item_title' href="work/team/index.html">团队纲要</a>
 		<p>
 			团队管理与发展的大体纲要和一些感悟
+			<span class='nav_time'>2017-9-2</span>
 		</p>
 	  <a class='item_title' href="work/cache/index.html">关于缓存</a>
 		<p>
 			讲述现阶段常用的几个缓存方案以及一些技术要点
+			<span class='nav_time'>2017-9-6</span>
 		</p>
 {% endblock %}
 
