--- a/src/views/work/_layout.html
+++ b/src/views/work/_layout.html
@@ -27,10 +27,10 @@
           {% block content %}{% endblock %}
         </section>
 
-        <aside id="sidebar">
+        <!-- <aside id="sidebar">
           <p><a href="http://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
           <p><a href="http://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
-        </aside>
+        </aside> -->
 
       </div>
     </div>
