--- a/src/views/work_nav.html
+++ b/src/views/work_nav.html
@@ -19,7 +19,7 @@
 			讲述现阶段常用的几个缓存方案以及一些技术要点
 			<span class='nav_time'>2017-9-6</span>
 		</p>
-	  <a class='item_title' href="work/cache/index.html">css层叠规则</a>
+	  <a class='item_title' href="../work/r/stacking-context/index.html">css层叠规则</a>
 		<p>
 			讲述css层叠上下文和层叠顺序的相关规律（含实例）
 			<span class='nav_time'>2017-9-13</span>
