--- a/src/views/work/activity/index.html
+++ b/src/views/work/activity/index.html
@@ -145,7 +145,7 @@ so
 <ul>
 <li>通常来讲，没有无聊的项目，只有不行的你，把项目给做无聊了</li>
 <li>不做纯架构，也不做纯业务，两者有机结合</li>
-<li>现在小步慢跑，希望一直再跑，然后越跑越快</li>
+<li>现在小步慢跑，希望一直在跑，然后越跑越快</li>
 <li>我们的目标是解决问题，而不只是提高技术水平</li>
 </ul>
 {% endblock %}
