--- a/src/views/work/activity/index.html
+++ b/src/views/work/activity/index.html
@@ -8,12 +8,11 @@
 
 <h2>序</h2>
 
-<pre><code>开发的担当：通过优秀的架构，提高各方工作效能！
-</code></pre>
+<pre><code>开发的担当：通过优秀的架构，提高各方工作效能！</code></pre>
 
 <h2>三个小故事</h2>
 
-<h3>不要随便相信第三方开发</h3>
+<h3>不要相信第三方开发</h3>
 
 <p>很久很久以前，某第三方厂商希望在我们的某App上面放置其开发的活动页面。<br/>
 当时不做多想，采用的方式就是为cp提供活动页面所需的客户端接口的文档，然后由cp自行适配和开发。<br/>
@@ -29,9 +28,12 @@ so
 <li>不要太依赖文档，你写的文档，他人要么不看，要么看不懂</li>
 </ul>
 
-<h3>不要随意相信需求方</h3>
+<h3>不要相信需求</h3>
 
-<p>你说你要一匹跑得更快的马，其实你是要一辆跑车……</p>
+<ul>
+  <li>你说你要一匹跑得更快的马，其实你是要一辆跑车……</li>
+  <li>需求迭代和重做的速度，有时会远超你的想象……</li>
+</ul>
 
 <h4>关于Deep Link</h4>
 
@@ -75,13 +77,22 @@ so
 <li>少部分愿意自己开发的cp，沟通成本非常高</li>
 </ul>
 
-<h3>不要随意相信自己</h3>
+<h3>不要相信自己</h3>
 
 <ul>
 <li>你自己写的埋点文档，过两天自己都找不到了</li>
 <li>你自己写的埋点逻辑，过两天自己都忘了</li>
 <li>同样的功能，每次写的文档和代码都会或多或少有点差异</li>
 <li>...</li>
+</ul>
+
+<p>三个故事，说到底，都是坑！</p>
+<p>踩完坑，接下来分享填坑的经验！</p>
+
+<ul>
+  <li>如何最小化接入代价</li>
+  <li>如何最大化开发效能</li>
+  <li>如何统一化公共流程</li>
 </ul>
 
 <h2>deeplink活动模版</h2>
