--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -13,6 +13,7 @@
 
       除了让我眼界大开，也是让我重新思考了一番：
       工作都这么努力，为什么找一个好伴侣就这么意志消沉，听天由命，扭扭捏捏；
+      高冷与扭捏，真的不值得被原谅！
       接下来，要浪起来...哈哈哈！
     </code>
   </pre>
