--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -32,7 +32,7 @@
       懂得装扮自己，愿意花时间提升自己，敢于拼搏...
 
       而，反思自己，由于家庭带来的劣根性，由于过去对自己的放纵，在很多方面，确实不够成熟和老练。
-      后续好好努力，希望为人处事方面，根据得心应手！
+      后续好好努力，希望为人处事方面，更加得心应手！
     </code>
   </pre>
   <p>
@@ -47,9 +47,9 @@
       当然，这些改变，大部分都是好的，变得根据积极主动、负责任、全局观更强等。
 
       但是，问题在于，领导容易把自身的想法套到下属身上。
-      自己很努力加班工作，就觉得下属也应该这样；
-      自己接任务，会主动把方方面面的事情都考虑进去，就觉得下属也是这么想的；
-      自己目标远大，就觉得下属也是有着同样的追求的；
+      有时候，你挺努力的，而你的下属看起来，却不是很在意；
+      有时候，你能想到的更多，而你的下属却有所纰漏；
+      有时候，你的目标并不是下属为之努力的方向；
 
       想想刚入行的自己，
       要不是到了这个位置，掌握了一定的信息，肩负了不同的责职，你可能比自己的下属差多了，
