--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -32,7 +32,8 @@
       懂得装扮自己，愿意花时间提升自己，敢于拼搏...
 
       而，反思自己，由于家庭带来的劣根性，由于过去对自己的放纵，在很多方面，确实不够成熟和老练。
-      后续好好努力，希望为人处事方面，更加得心应手！
+      多一些反省，多一些改变，多一些学习！
+      未来才会更加美好！
     </code>
   </pre>
   <p>
