--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -1,6 +1,13 @@
-{% extends "../_layout.html" %}
-
-{% block head_extend %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/style_9ff3e0aa.css" media="screen" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
+    
 <style media="screen">
   pre{
     margin: 0;
@@ -15,9 +22,24 @@
     margin-bottom: 0;
   }
 </style>
-{% endblock %}
 
-{% block content %}
+    <title>ShellHong's Blog</title>
+  </head>
+  <body>
+    <header>
+      <div class="inner">
+        <a href="https://blog.shellhong.com">
+          <h1>ShellHong Blog</h1>
+        </a>
+        <a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a>
+      </div>
+    </header>
+
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+
+        <section id="main-content"><!--内容主体-->
+          
 <div>
   <pre>
     <code>
@@ -80,7 +102,17 @@
   </p>
 </div>
 
-{% endblock %}
 
-{% block footer_extend %}
-{% endblock %}
+        </section>
+
+        <!-- <aside id="sidebar">
+          <p><a href="http://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
+          <p><a href="http://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
+        </aside> -->
+
+      </div>
+    </div>
+    
+
+  </body>
+</html>
