--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -2,14 +2,20 @@
 
 {% block head_extend %}
 <style media="screen">
+  div{
+    position: relative;
+    margin-bottom: 20px;
+  }
   pre{
     margin: 0;
     padding: 0;
   }
   p{
-    text-align: right;
-    margin-top: -25px;
-    margin-right: 8px;
+    position: absolute;
+    white-space: nowrap;
+    bottom: 5px;
+    right: 5px;
+    margin: 0;
   }
   pre code{
     margin-bottom: 0;
