--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -9,14 +9,20 @@
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
     
 <style media="screen">
+  div{
+    position: relative;
+    margin-bottom: 20px;
+  }
   pre{
     margin: 0;
     padding: 0;
   }
   p{
-    text-align: right;
-    margin-top: -25px;
-    margin-right: 8px;
+    position: absolute;
+    white-space: nowrap;
+    bottom: 5px;
+    right: 5px;
+    margin: 0;
   }
   pre code{
     margin-bottom: 0;
