--- a/index/style_7b99efd2.css
+++ b/index/style_7b99efd2.css
@@ -409,7 +409,8 @@ header h2 {
 }
 #main-content {
   float: left;
-  width: 690px
+  width: 100%;
+  /*width: 690px*/
 }
 #main-content img {
   max-width: 100%
