--- a/src/views/remark/2017/index.html
+++ b/src/views/remark/2017/index.html
@@ -25,7 +25,22 @@
   那些耳朵里面除了枪响再没有其他声音的阿富汗孩子当时还没出世。
   在餐厅里，我们挤成一堆，等待太阳升起，没人意识到过去的生活方式已然告终。
   我们的生活方式，即使尚未全然终结，那也是苟延残喘。
-  终结，正式的终结是在1978年4月，其时政发生，接着是1979年12月，俄国坦克在我和哈桑玩耍的街道上耀武扬威，给我的父老乡亲带来死亡，开启了如今仍未过去的、血流成河的时代。
+  终结，正式的终结是在1978年4月，其时政发生，接着是1979年12月，俄国坦克在我和哈桑玩耍的街道上耀武扬威，
+  给我的父老乡亲带来死亡，开启了如今仍未过去的、血流成河的时代。
+      </code>
+    </pre>
+    <pre>
+      <code>
+  我记得爸爸爬到一半，从梯子一跃而下，从口袋里掏出烟盒。
+  他把盒子晴空，从土路中央抓起一把灰泥。
+  他轻吻泥土，把它放进盒子，把盒子放进胸前的口袋，贴着他的心。
+      </code>
+    </pre>
+    <pre>
+      <code>
+  我不记得那是何年何月的事情。
+  我只知道与我同在，将美好的往事完美地浓缩起来，
+  如同一笔浓墨重彩，涂抹在我们那已经变得灰白单调的生活画布上。
       </code>
     </pre>
 {% endblock %}
