--- a/src/views/remark/2017/index.html
+++ b/src/views/remark/2017/index.html
@@ -40,6 +40,10 @@
   我只知道与我同在，将美好的往事完美地浓缩起来，
   如同一笔浓墨重彩，涂抹在我们那已经变得灰白单调的生活画布上。</code>
     </pre>
+    <pre>
+      <code>
+  孩子们就是这样对付恐惧：他们睡觉。</code>
+    </pre>
 {% endblock %}
 
 {% block footer_extend %}
