--- a/export/views/remark/2017/index.html
+++ b/export/views/remark/2017/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-    
+
 <style media="screen">
   pre{
     margin: 0;
@@ -37,7 +37,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          
+
 <h5>追风筝的人</h5>
     <pre>
       <code>
@@ -62,7 +62,10 @@
   我只知道与我同在，将美好的往事完美地浓缩起来，
   如同一笔浓墨重彩，涂抹在我们那已经变得灰白单调的生活画布上。</code>
     </pre>
-
+    <pre>
+      <code>
+    孩子们就是这样对付恐惧：他们睡觉。</code>
+    </pre>
         </section>
 
         <!-- <aside id="sidebar">
@@ -72,7 +75,7 @@
 
       </div>
     </div>
-    
+
 
   </body>
 </html>
