--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-    
+
 <style media="screen">
   div{
     position: relative;
@@ -45,7 +45,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          
+
 <div>
   <pre>
     <code>
@@ -107,7 +107,21 @@
     2017-9-23
   </p>
 </div>
+<div>
+  <pre>
+    <code>
+      又是一个失眠的早晨，胡思乱想之下，总结了一下自己的管理理念。
 
+      于项目与业务而言，推崇高度的个人敏捷；
+      于架构而言，推崇关键模块、组件、技术方案、标准等大方向的把控；
+      于组织而言，推崇互帮互助与氛围建设；
+      于个人而言，自研与学习，然后反辅团队；
+    </code>
+  </pre>
+  <p>
+    2017-10-2
+  </p>
+</div>
 
         </section>
 
@@ -118,7 +132,7 @@
 
       </div>
     </div>
-    
+
 
   </body>
 </html>
