--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -85,6 +85,21 @@
     2017-9-23
   </p>
 </div>
+<div>
+  <pre>
+    <code>
+      又是一个失眠的早晨，胡思乱想之下，总结了一下自己的管理理念。
+
+      于项目与业务而言，推崇高度的个人敏捷；
+      于架构而言，推崇关键模块、组件、技术方案、标准等大方向的把控；
+      于组织而言，推崇互帮互助与氛围建设；
+      于个人而言，自研与学习，然后反辅团队；
+    </code>
+  </pre>
+  <p>
+    2017-10-2
+  </p>
+</div>
 
 {% endblock %}
 
