--- a/export/views/remark/2017/index.html
+++ b/export/views/remark/2017/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
-    <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
-    <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-
-<style media="screen">
-  pre{
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="chrome=1"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css"><link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css"><link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css"><style media="screen">pre{
     margin: 0;
     padding: 0;
   }
@@ -18,28 +7,7 @@
   }
   pre:not(:last-child){
     margin-bottom: 20px;
-  }
-</style>
-
-    <title>ShellHong's Blog</title>
-  </head>
-  <body>
-    <header>
-      <div class="inner">
-        <a href="https://blog.shellhong.com">
-          <h1>ShellHong Blog</h1>
-        </a>
-        <a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-
-        <section id="main-content"><!--内容主体-->
-
-<h5>追风筝的人</h5>
-    <pre>
+  }</style><title>ShellHong's Blog</title></head><body><header><div class="inner"><a href="https://blog.shellhong.com"><h1>ShellHong Blog</h1></a><a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a></div></header><div id="content-wrapper"><div class="inner clearfix"><section id="main-content"><!--内容主体--><h5>追风筝的人</h5><pre>
       <code>
   我们就那样哆哆嗦嗦地抱成一团，直到天快破晓。
   枪声和爆炸声还没一个钟头就结束，可是把我们吓坏了，因为我们从来没听过街道上会有枪声。
@@ -49,33 +17,28 @@
   我们的生活方式，即使尚未全然终结，那也是苟延残喘。
   终结，正式的终结是在1978年4月，其时政发生，接着是1979年12月，俄国坦克在我和哈桑玩耍的街道上耀武扬威，
   给我的父老乡亲带来死亡，开启了如今仍未过去的、血流成河的时代。</code>
-    </pre>
-    <pre>
+    </pre><pre>
       <code>
   我记得爸爸爬到一半，从梯子一跃而下，从口袋里掏出烟盒。
   他把盒子晴空，从土路中央抓起一把灰泥。
   他轻吻泥土，把它放进盒子，把盒子放进胸前的口袋，贴着他的心。</code>
-    </pre>
-    <pre>
+    </pre><pre>
       <code>
   我不记得那是何年何月的事情。
   我只知道与我同在，将美好的往事完美地浓缩起来，
   如同一笔浓墨重彩，涂抹在我们那已经变得灰白单调的生活画布上。</code>
-    </pre>
-    <pre>
+    </pre><pre>
       <code>
-    孩子们就是这样对付恐惧：他们睡觉。</code>
-    </pre>
-        </section>
-
-        <!-- <aside id="sidebar">
+  孩子们就是这样对付恐惧：他们睡觉。</code>
+    </pre><h5>雅句</h5><pre>
+      <code>
+  樱花落下的速度是每秒五厘米 我该用什么样的速度 才能与你相遇
+  ——秒速五厘米
+  屋滴降落的速度是每秒十米 我该用什么样的速度 才能将你挽留
+  ——言叶之庭
+  陨石坠落的速度是每秒十千米 我该用什么样的速度 才能将你拯救
+  ——你的名字</code>
+    </pre></section><!-- <aside id="sidebar">
           <p><a href="http://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
           <p><a href="http://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
-        </aside> -->
-
-      </div>
-    </div>
-
-
-  </body>
-</html>
+        </aside> --></div></div></body></html>
