--- a/export/views/work/activity/index.html
+++ b/export/views/work/activity/index.html
@@ -1,198 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
-    <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
-    <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-    
-
-    <title>ShellHong's Blog</title>
-  </head>
-  <body>
-    <header>
-      <div class="inner">
-        <a href="https://blog.shellhong.com">
-          <h1>ShellHong Blog</h1>
-        </a>
-        <a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-
-        <section id="main-content"><!--内容主体-->
-          
-<h1>活动架构</h1>
-
-<h2>序</h2>
-
-<pre><code>开发的担当：通过优秀的架构，提高各方工作效能！</code></pre>
-
-<h2>三个小故事</h2>
-
-<h3>不要相信第三方开发</h3>
-
-<p>很久很久以前，某第三方厂商希望在我们的某App上面放置其开发的活动页面。<br/>
-当时不做多想，采用的方式就是为cp提供活动页面所需的客户端接口的文档，然后由cp自行适配和开发。<br/>
-以往都是需要我们来开发页面的，现在它们自己开发了，真好！<br/>
-理想很美好，现实很骨感！<br/>
-由于技术水平、熟悉程度和无法当面沟通等问题，我们花了大量的时间，教他入门，最后甚至帮他修改代码！<br/>
-耗费了大量人力，堪比自己开发。<br/></p>
-
-so
-<ul>
-<li>不要随便相信第三方开发（说不定，他会随便派一个应届毕业生来跟你做对接；也有可能还没毕业）</li>
-<li>不要随便提供接口文档给第三方，裸奔不安全，也不友好</li>
-<li>不要太依赖文档，你写的文档，他人要么不看，要么看不懂</li>
-</ul>
-
-<h3>不要相信需求</h3>
-
-<ul>
-  <li>你说你要一匹跑得更快的马，其实你是要一辆跑车……</li>
-  <li>需求迭代和重做的速度，有时会远超你的想象……</li>
-</ul>
-
-<h4>关于Deep Link</h4>
-
-<p>这是一种实现在不同的app间进行跳转的技术方案，其流程大致如下：</p>
-
-<p><img src="../../../images/work/activity/deeplink_d5d8e4a7.jpg" alt="deeplink流程" title="" /></p>
-
-<ul>
-<li>Deep Link、scheme、schema
-<ul><li>简单粗暴的理解：Deep Link是实现跳转的一种技术方案，scheme、schema都是指跳转使用的路径（其实不完全是）</li>
-<li>scheme是指URL的协议部分，在Deep Link中，理想状态下，一个sheme对应一个app（其实不完全是）</li></ul></li>
-</ul>
-
-<h4>故事情节</h4>
-
-<p>某天，接到一个简单的需求：点击push，跳转第三方APP活动页面（CPC）;<br/>
-看似简单，但是细心一想，其实只有已经安装的，能进行成功跳转，而未安装的，需要提供下载安装功能、良好的交互与视觉效果。<br/>
-基于之前踩过的坑，这次决定采用一种更加灵活和复用性更强的架构，支持两种模式：</p>
-
-<ul>
-<li>默认简易模式
-<ul><li>页面简单，只有APP Icon和下载按钮</li>
-<li>无需开发，只需要非常简单的配置，即可生成活动</li></ul></li>
-<li>自行定制模式
-<ul><li>cp可根据需要自行开发定制页面UI和交互</li>
-<li>需要加入我们提供的少量代码</li></ul></li>
-</ul>
-
-<p><img src="../../../images/work/activity/two_mode_4cfbd8ab.png" alt="deeplink两种模式" title="" /></p>
-
-<p>实现方式：
-以承载页嵌套内容页的方式，承载页负责逻辑，由我们实现，内容页负责展示，由cp实现。两个页面通过<code>PostMessage</code>进行通信</p>
-
-<p><img src="../../../images/work/activity/postmessage_4f533ebf.png" alt="PostMessage" title="" /></p>
-
-<p>看起来很完美，然而，随之而来的是：</p>
-
-<ul>
-<li>默认简易模式被嫌弃太简陋，导致每次都要定制</li>
-<li>cp每次都想定制，但是又不想自己开发</li>
-<li>少部分愿意自己开发的cp，沟通成本非常高</li>
-</ul>
-
-<h3>不要相信自己</h3>
-
-<ul>
-<li>你自己写的埋点文档，过两天自己都找不到了</li>
-<li>你自己写的埋点逻辑，过两天自己都忘了</li>
-<li>同样的功能，每次写的文档和代码都会或多或少有点差异</li>
-<li>...</li>
-</ul>
-
-<p>三个故事，说到底，都是坑！</p>
-<p>踩完坑，接下来分享填坑的经验！</p>
-
-<ul>
-  <li>如何最小化接入代价</li>
-  <li>如何最大化开发效能</li>
-  <li>如何统一化公共流程</li>
-</ul>
-
-<h2>deeplink活动模版</h2>
-
-<h3>架构</h3>
-
-<p><img src="../../../images/work/activity/architecture_ced887f1.png" alt="architecture" title="" /></p>
-
-<h3>scene配置平台</h3>
-
-<ul>
-<li>flyme内部用于配置各种营销页面的平台</li>
-<li>平台水土不服，演化出来一系列的工具和说明文档</li>
-</ul>
-
-<h3>文档</h3>
-
-<ul>
-<li>cp deeplink活动模版说明</li>
-<li>deeplink内容页配置平台使用教程</li>
-<li>deeplink导航页配置教程</li>
-</ul>
-
-<h3>工具</h3>
-
-<ul>
-<li>多机型测试工具</li>
-<li>路径生成工具</li>
-<li>deeplink链接有效性验证</li>
-<li>deeplink流程模拟测试</li>
-<li>导航页代码生成工具</li>
-</ul>
-
-<h3>未来</h3>
-
-<p>一个综合性配置平台，涵盖和汇总以上功能</p>
-
-<h2>发散</h2>
-
-<h3>联合活动</h3>
-
-<ul>
-<li>现有架构（公共包引入）</li>
-</ul>
-
-<p><img src="../../../images/work/activity/game_old_architecture_3348b112.png" alt="architecture" title="" /></p>
-
-<ul>
-<li>理想架构（公共服务提供）</li>
-</ul>
-
-<p><img src="../../../images/work/activity/game_new_architecture_cc0a71f9.png" alt="architecture" title="" /></p>
-
-<ul>
-<li>更少的改动，更稳定、高效的完成</li>
-<li>更简单的内容页，配置化的可能性更高</li>
-<li>更高的接入可能性（客户端接口适配问题、埋点和业务逻辑问题，游戏活动）</li>
-</ul>
-
-<h2>业务前端方法论</h2>
-
-<ul>
-<li>通常来讲，没有无聊的项目，只有不行的你，把项目给做无聊了</li>
-<li>不做纯架构，也不做纯业务，两者有机结合</li>
-<li>现在小步慢跑，希望一直在跑，然后越跑越快</li>
-<li>我们的目标是解决问题，而不只是提高技术水平</li>
-</ul>
-
-        </section>
-
-        <!-- <aside id="sidebar">
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="chrome=1"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css"><link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css"><link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css"><title>ShellHong's Blog</title></head><body><header><div class="inner"><a href="https://blog.shellhong.com"><h1>ShellHong Blog</h1></a><a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a></div></header><div id="content-wrapper"><div class="inner clearfix"><section id="main-content"><!--内容主体--><h1>活动架构</h1><h2>序</h2><pre><code>开发的担当：通过优秀的架构，提高各方工作效能！</code></pre><h2>三个小故事</h2><h3>不要相信第三方开发</h3><p>很久很久以前，某第三方厂商希望在我们的某App上面放置其开发的活动页面。<br>当时不做多想，采用的方式就是为cp提供活动页面所需的客户端接口的文档，然后由cp自行适配和开发。<br>以往都是需要我们来开发页面的，现在它们自己开发了，真好！<br>理想很美好，现实很骨感！<br>由于技术水平、熟悉程度和无法当面沟通等问题，我们花了大量的时间，教他入门，最后甚至帮他修改代码！<br>耗费了大量人力，堪比自己开发。<br></p>so<ul><li>不要随便相信第三方开发（说不定，他会随便派一个应届毕业生来跟你做对接；也有可能还没毕业）</li><li>不要随便提供接口文档给第三方，裸奔不安全，也不友好</li><li>不要太依赖文档，你写的文档，他人要么不看，要么看不懂</li></ul><h3>不要相信需求</h3><ul><li>你说你要一匹跑得更快的马，其实你是要一辆跑车……</li><li>需求迭代和重做的速度，有时会远超你的想象……</li></ul><h4>关于Deep Link</h4><p>这是一种实现在不同的app间进行跳转的技术方案，其流程大致如下：</p><p><img src="../../../images/work/activity/deeplink_d5d8e4a7.jpg" alt="deeplink流程" title=""></p><ul><li>Deep Link、scheme、schema<ul><li>简单粗暴的理解：Deep Link是实现跳转的一种技术方案，scheme、schema都是指跳转使用的路径（其实不完全是）</li><li>scheme是指URL的协议部分，在Deep Link中，理想状态下，一个sheme对应一个app（其实不完全是）</li></ul></li></ul><h4>故事情节</h4><p>某天，接到一个简单的需求：点击push，跳转第三方APP活动页面（CPC）;<br>看似简单，但是细心一想，其实只有已经安装的，能进行成功跳转，而未安装的，需要提供下载安装功能、良好的交互与视觉效果。<br>基于之前踩过的坑，这次决定采用一种更加灵活和复用性更强的架构，支持两种模式：</p><ul><li>默认简易模式<ul><li>页面简单，只有APP Icon和下载按钮</li><li>无需开发，只需要非常简单的配置，即可生成活动</li></ul></li><li>自行定制模式<ul><li>cp可根据需要自行开发定制页面UI和交互</li><li>需要加入我们提供的少量代码</li></ul></li></ul><p><img src="../../../images/work/activity/two_mode_4cfbd8ab.png" alt="deeplink两种模式" title=""></p><p>实现方式： 以承载页嵌套内容页的方式，承载页负责逻辑，由我们实现，内容页负责展示，由cp实现。两个页面通过<code>PostMessage</code>进行通信</p><p><img src="../../../images/work/activity/postmessage_4f533ebf.png" alt="PostMessage" title=""></p><p>看起来很完美，然而，随之而来的是：</p><ul><li>默认简易模式被嫌弃太简陋，导致每次都要定制</li><li>cp每次都想定制，但是又不想自己开发</li><li>少部分愿意自己开发的cp，沟通成本非常高</li></ul><h3>不要相信自己</h3><ul><li>你自己写的埋点文档，过两天自己都找不到了</li><li>你自己写的埋点逻辑，过两天自己都忘了</li><li>同样的功能，每次写的文档和代码都会或多或少有点差异</li><li>...</li></ul><p>三个故事，说到底，都是坑！</p><p>踩完坑，接下来分享填坑的经验！</p><ul><li>如何最小化接入代价</li><li>如何最大化开发效能</li><li>如何统一化公共流程</li></ul><h2>deeplink活动模版</h2><h3>架构</h3><p><img src="../../../images/work/activity/architecture_ced887f1.png" alt="architecture" title=""></p><h3>scene配置平台</h3><ul><li>flyme内部用于配置各种营销页面的平台</li><li>平台水土不服，演化出来一系列的工具和说明文档</li></ul><h3>文档</h3><ul><li>cp deeplink活动模版说明</li><li>deeplink内容页配置平台使用教程</li><li>deeplink导航页配置教程</li></ul><h3>工具</h3><ul><li>多机型测试工具</li><li>路径生成工具</li><li>deeplink链接有效性验证</li><li>deeplink流程模拟测试</li><li>导航页代码生成工具</li></ul><h3>未来</h3><p>一个综合性配置平台，涵盖和汇总以上功能</p><h2>发散</h2><h3>联合活动</h3><ul><li>现有架构（公共包引入）</li></ul><p><img src="../../../images/work/activity/game_old_architecture_3348b112.png" alt="architecture" title=""></p><ul><li>理想架构（公共服务提供）</li></ul><p><img src="../../../images/work/activity/game_new_architecture_cc0a71f9.png" alt="architecture" title=""></p><ul><li>更少的改动，更稳定、高效的完成</li><li>更简单的内容页，配置化的可能性更高</li><li>更高的接入可能性（客户端接口适配问题、埋点和业务逻辑问题，游戏活动）</li></ul><h2>业务前端方法论</h2><ul><li>通常来讲，没有无聊的项目，只有不行的你，把项目给做无聊了</li><li>不做纯架构，也不做纯业务，两者有机结合</li><li>现在小步慢跑，希望一直在跑，然后越跑越快</li><li>我们的目标是解决问题，而不只是提高技术水平</li></ul></section><!-- <aside id="sidebar">
           <p><a href="http://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
           <p><a href="http://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
-        </aside> -->
-
-      </div>
-    </div>
-    
-
-  </body>
-</html>
+        </aside> --></div></div></body></html>
