--- a/src/views/remark/2017/index.html
+++ b/src/views/remark/2017/index.html
@@ -44,6 +44,16 @@
       <code>
   孩子们就是这样对付恐惧：他们睡觉。</code>
     </pre>
+<h5>雅句</h5>
+    <pre>
+      <code>
+  樱花落下的速度是每秒五厘米 我该用什么样的速度 才能与你相遇
+  ——秒速五厘米
+  屋滴降落的速度是每秒十米 我该用什么样的速度 才能将你挽留
+  ——言叶之庭
+  陨石坠落的速度是每秒十千米 我该用什么样的速度 才能将你拯救
+  ——你的名字</code>
+    </pre>
 {% endblock %}
 
 {% block footer_extend %}
