--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -1,4 +1,15 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="chrome=1"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css"><link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css"><link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css"><style media="screen">div{
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
+    
+<style media="screen">
+  div{
     position: relative;
     margin-bottom: 20px;
   }
@@ -15,50 +26,38 @@
   }
   pre code{
     margin-bottom: 0;
-  }</style><title>ShellHong's Blog</title></head><body><header><div class="inner"><a href="https://blog.shellhong.com"><h1>ShellHong Blog</h1></a><a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a></div></header><div id="content-wrapper"><div class="inner clearfix"><section id="main-content"><!--内容主体--><div><pre>
+  }
+</style>
+
+    <title>ShellHong's Blog</title>
+  </head>
+  <body>
+    <header>
+      <div class="inner">
+        <a href="https://blog.shellhong.com">
+          <h1>ShellHong Blog</h1>
+        </a>
+        <a href="mailto:shellhong6@gmail.com" class="button">Send email to me</a>
+      </div>
+    </header>
+
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+
+        <section id="main-content"><!--内容主体-->
+          
+<div>
+  <pre>
     <code>
-      最近挺多同事都在关心着我的脱单大业，也跟我聊了不少，确实让我的榆木脑袋稍微有点开窍。
-      特别要感谢今晚一起吃饭的两位老司机（yang and hu），真的是让我学到不少套路。
-      什么要积极主动、要有自信、剩女的孤单、没事献殷勤、投其所好、RoseOnly、DarryRing...
-
-      除了让我眼界大开，也是让我重新思考了一番：
-      工作都这么努力，为什么找一个好伴侣就这么意志消沉，听天由命，扭扭捏捏；
-      高冷与扭捏，真的不值得被原谅！
-      接下来，要浪起来...哈哈哈！
+      RoseOnly、DarryRing...
     </code>
-  </pre><p>2017-9-23</p></div><div><pre>
-    <code>
-      有时候，观察观察，发现身边有挺多人的身上或多或少都有一些很值得我学习的地方。
-      比如说性格太腼腆，不够直爽！
-      比如说有个朋友，很会撩人。
-      他带了一个新人，喜欢看书，他就选了个合适的机会，送了一本自己买的小说送人家；
-      打球，饮料买多了，送给小区保安一瓶，后续好办事；
-      懂得装扮自己，愿意花时间提升自己，敢于拼搏...
-
-      而，反思自己，由于家庭带来的劣根性，由于过去对自己的放纵，在很多方面，确实不够成熟和老练。
-      多一些反省，多一些改变，多一些学习！
-      未来才会更加美好！
-    </code>
-  </pre><p>2017-9-23</p></div><div><pre>
-    <code>
-      有一句话，叫屁股决定脑袋！
-      现在想想，自从做了主管，确实想法和以前做一个简简单单的开发有了很大的区别！
-      当然，这些改变，大部分都是好的，变得根据积极主动、负责任、全局观更强等。
-
-      但是，问题在于，领导容易把自身的想法套到下属身上。
-      有时候，你挺努力的，而你的下属看起来，却不是很在意；
-      有时候，你能想到的更多，而你的下属却有所纰漏；
-      有时候，你的目标并不是下属为之努力的方向；
-
-      想想刚入行的自己，
-      要不是到了这个位置，掌握了一定的信息，肩负了不同的责职，你可能比自己的下属差多了，
-
-      所以，希望自己有两个心思，
-      一个放在管理岗位，下决策，领潮流，开未来，
-      一个放在下属身上，懂他们，多沟通，多开导；
-      把你要同步的信息好好同步下去，别人不是你肚子里的蛔虫。
-    </code>
-  </pre><p>2017-9-23</p></div><div><pre>
+  </pre>
+  <p>
+    2017-9-23
+  </p>
+</div>
+<div>
+  <pre>
     <code>
       又是一个失眠的早晨，胡思乱想之下，总结了一下自己的管理理念。
 
@@ -67,7 +66,23 @@
       于组织而言，推崇互帮互助与氛围建设；
       于个人而言，自研与学习，然后反辅团队；
     </code>
-  </pre><p>2017-10-2</p></div></section><!-- <aside id="sidebar">
+  </pre>
+  <p>
+    2017-10-2
+  </p>
+</div>
+
+
+        </section>
+
+        <!-- <aside id="sidebar">
           <p><a href="http://blog.shellhong.com/export/views/work_nav.html">工作</a></p>
           <p><a href="http://blog.shellhong.com/export/views/life_nav.html">生活</a></p>
-        </aside> --></div></div></body></html>
+        </aside> -->
+
+      </div>
+    </div>
+    
+
+  </body>
+</html>
