--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -27,58 +27,7 @@
 <div>
   <pre>
     <code>
-      最近挺多同事都在关心着我的脱单大业，也跟我聊了不少，确实让我的榆木脑袋稍微有点开窍。
-      特别要感谢今晚一起吃饭的两位老司机（yang and hu），真的是让我学到不少套路。
-      什么要积极主动、要有自信、剩女的孤单、没事献殷勤、投其所好、RoseOnly、DarryRing...
-
-      除了让我眼界大开，也是让我重新思考了一番：
-      工作都这么努力，为什么找一个好伴侣就这么意志消沉，听天由命，扭扭捏捏；
-      高冷与扭捏，真的不值得被原谅！
-      接下来，要浪起来...哈哈哈！
-    </code>
-  </pre>
-  <p>
-    2017-9-23
-  </p>
-</div>
-<div>
-  <pre>
-    <code>
-      有时候，观察观察，发现身边有挺多人的身上或多或少都有一些很值得我学习的地方。
-      比如说性格太腼腆，不够直爽！
-      比如说有个朋友，很会撩人。
-      他带了一个新人，喜欢看书，他就选了个合适的机会，送了一本自己买的小说送人家；
-      打球，饮料买多了，送给小区保安一瓶，后续好办事；
-      懂得装扮自己，愿意花时间提升自己，敢于拼搏...
-
-      而，反思自己，由于家庭带来的劣根性，由于过去对自己的放纵，在很多方面，确实不够成熟和老练。
-      多一些反省，多一些改变，多一些学习！
-      未来才会更加美好！
-    </code>
-  </pre>
-  <p>
-    2017-9-23
-  </p>
-</div>
-<div>
-  <pre>
-    <code>
-      有一句话，叫屁股决定脑袋！
-      现在想想，自从做了主管，确实想法和以前做一个简简单单的开发有了很大的区别！
-      当然，这些改变，大部分都是好的，变得根据积极主动、负责任、全局观更强等。
-
-      但是，问题在于，领导容易把自身的想法套到下属身上。
-      有时候，你挺努力的，而你的下属看起来，却不是很在意；
-      有时候，你能想到的更多，而你的下属却有所纰漏；
-      有时候，你的目标并不是下属为之努力的方向；
-
-      想想刚入行的自己，
-      要不是到了这个位置，掌握了一定的信息，肩负了不同的责职，你可能比自己的下属差多了，
-
-      所以，希望自己有两个心思，
-      一个放在管理岗位，下决策，领潮流，开未来，
-      一个放在下属身上，懂他们，多沟通，多开导；
-      把你要同步的信息好好同步下去，别人不是你肚子里的蛔虫。
+      RoseOnly、DarryRing...
     </code>
   </pre>
   <p>
