update carousel document

--- a/export/views/work/carousel/index.html
+++ b/export/views/work/carousel/index.html
@@ -30,19 +30,19 @@
 
 <h2>为什么要自己实现</h2>
 
-<p>图片轮播，这其实已经是一个烂大街的功能，到处可见；网上也有很多现成的组件，那为什么我还要自己来实现呢？主要的原因有两个</p>
+<p>图片轮播，这其实已经是一个烂大街的功能，到处可见；网上也有很多现成的组件，那为什么还要自己来实现呢？主要的原因有两个</p>
 
 <ul>
 <li>性能</li>
 <li>定制化</li>
 </ul>
 
-<p>一个是网上的组件良莠不齐，在pc跑跑还可以，到了移动端，各种卡。
-另外一个原因，是因为有诸多定制化的交互要实现，所以还是自己用原生js写了一个移动端的轮播组件。</p>
+<p>一个是网上的组件良莠不齐，在pc跑跑还可以，到了移动端，各种卡。</p>
+<p>另外一个原因，是因为有诸多定制化的交互要实现，所以还是自力更生，丰衣足食！</p>
 
-<h2>现成组件流程举例</h2>
+<h2>举两个栗子</h2>
 
-<p>在自己撸代码之前，还是要先瞄一瞄别人的实现的，正所谓：不看白不看。下面列举两种网上比较通用的轮播方案</p>
+<p>在自己撸代码之前，先来看看别人家的组件，正所谓：不看白不看。下面列举两种网上比较通用的轮播方案</p>
 
 <ul>
 <li>方案一</li>
@@ -56,21 +56,24 @@
 
 <p><img src="../../../images/work/carousel/2_0a1dfb77.png" alt="流程二" title="" /></p>
 
-<p>方案一在轮播至边界时，需要从这一端快速滑动至另外一端，效果不佳；
-方案二对边界轮播做了优化，但还是略显不足；</p>
+<p>方案一在轮播至边界时，需要从这一端快速滑动至另外一端，体验不佳；</p>
+<p>方案二对边界轮播做了优化，但还是略显不足；</p>
 
-<h2>自行实现</h2>
+<h2>原创方案</h2>
 
-<p>先来看看，原创方案的示意图！</p>
+<p>接下来看看相关的示意图！</p>
 
 <p><img src="../../../images/work/carousel/3_a218ab0c.png" alt="流程三" title="" /></p>
 
 <ul>
+<li>容器用了虚线框，因为此方案的ul是不需要设置宽高的</li>
 <li>容器ul和元素li都使用了translate3d以及相关属性,从而更好的利用硬件加速</li>
 <li>边界处理：只移动一个元素，便可实现循环，性价比更高</li>
 </ul>
 
 <h2>原创demo</h2>
+
+只处理了移动端事件（touch系列），所以要体验完整功能，请使用移动端浏览器打开以下实例。
 
 <ul>
 <li><a href="../../../../effect/carousel/index-base.html">base模式</a></li>
@@ -80,7 +83,7 @@
 
 <h2>github项目</h2>
 
-<p><a href="https://github.com/shellhong6/carousel">点击访问</a></p>
+<p>更多细节和源码，请：<a href="https://github.com/shellhong6/carousel">点击访问</a></p>
 
         </section>
 
