--- a/src/views/work/activity/index.html
+++ b/src/views/work/activity/index.html
@@ -101,12 +101,30 @@ so
 
 <p><img src="../../../images/work/activity/architecture.png" alt="architecture" title="" /></p>
 
+<div>思路挺清晰啦！</div>
+<div>但是，想想容易，怎么落实和推动，又是另外一番考验了！</div>
+<div>分析一下这个框架，除了第一层（展示层），其他层级的内容都比较稳定，而且不涉及第三方。</div>
+<div>所以，接下来，集中精力优化第一层的实现方案！</div>
+
 <h3>scene配置平台</h3>
 
+<div>首先想到的是，如果能用拖动和配置的方式，自动生成展示层页面，那就完美了。</div>
+<div>但是，这样一个页面配置平台，自研的话，需要较多的时间和人力成本。</div>
+<div>而往往很多时候，业务团队的很多好的技术性idea，就是这样夭折的。</div>
+<div>那怎么办呢...</div>
+<div>于是，在公司内部找了一个现成的用于配置各种微信营销页面的平台。依托这个平台，展示层的配置问题就解决了一大半。</div>
+<div>剩下的一小半，就是解决页面通信（postmessage）逻辑注入的问题。</div>
+<div>通过跨部门沟通与协商，终于，让该平台的开发人员，以较小的代价，提供了一个代码注入的入口。</div>
+<div>最后，还剩下一些小问题要解决。</p>
+
 <ul>
-<li>flyme内部用于配置各种营销页面的平台</li>
-<li>平台水土不服，演化出来一系列的工具和说明文档</li>
+<li>教会运营人员配置的方法</li>
+<li>第二层（承载页）的配置问题</li>
+<li>注入代码的生成问题</li>
+<li>最终页面的测试问题</li>
 </ul>
+
+以上问题如何解决，那就得依赖以下的文档和工具了！
 
 <h3>文档</h3>
 
@@ -126,7 +144,7 @@ so
 <li>导航页代码生成工具</li>
 </ul>
 
-<h3>未来</h3>
+<h3>理想状态</h3>
 
 <p>一个综合性配置平台，涵盖和汇总以上功能</p>
 
