--- a/export/views/jottings/team/index.html
+++ b/export/views/jottings/team/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-    
+
 
     <title>ShellHong's Blog</title>
   </head>
@@ -25,7 +25,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          
+
 <h1>团队概要</h1>
 
 <h2>人才梯队</h2>
@@ -132,6 +132,11 @@
 <ul><li>通过wiki，积累技术和业务文档</li>
 <li>通过内部仓库，积累自己的组件库与公用模块</li>
 <li>最终的目的，每天前进一小步（效能提升）</li></ul></li>
+<li>活力
+  <ul>
+    <li>每周一题（一道题目、一个议题、一次头脑风暴）</li>
+  </ul>
+</li>
 </ul>
 
 <h2>业务能力提升</h2>
@@ -182,7 +187,7 @@
 
       </div>
     </div>
-    
+
 
   </body>
 </html>
