--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -47,6 +47,16 @@
     2017-10-2
   </p>
 </div>
+<div>
+  <pre>
+    <code>
+      年纪大了，喜欢有想法的人！
+    </code>
+  </pre>
+  <p>
+    2017-10-22
+  </p>
+</div>
 
 {% endblock %}
 
