--- a/src/views/jottings/team/index.html
+++ b/src/views/jottings/team/index.html
@@ -110,6 +110,11 @@
 <ul><li>通过wiki，积累技术和业务文档</li>
 <li>通过内部仓库，积累自己的组件库与公用模块</li>
 <li>最终的目的，每天前进一小步（效能提升）</li></ul></li>
+<li>活力
+  <ul>
+    <li>每周一题（一道题目、一个议题、一次头脑风暴）</li>
+  </ul>
+</li>
 </ul>
 
 <h2>业务能力提升</h2>
