--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-    
+
 <style media="screen">
   div{
     position: relative;
@@ -45,7 +45,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          
+
 <div>
   <pre>
     <code>
@@ -69,7 +69,16 @@
     2017-10-2
   </p>
 </div>
-
+<div>
+  <pre>
+    <code>
+      年纪大了，喜欢有想法的人！
+    </code>
+  </pre>
+  <p>
+    2017-10-22
+  </p>
+</div>
 
         </section>
 
@@ -80,7 +89,7 @@
 
       </div>
     </div>
-    
+
 
   </body>
 </html>
