--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-
+    
 <style media="screen">
   div{
     position: relative;
@@ -45,7 +45,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-
+          
 <div>
   <pre>
     <code>
@@ -72,6 +72,18 @@
 <div>
   <pre>
     <code>
+      架构演化：
+      组装 -> 分层
+      工具方法封装 -> 流程封装
+    </code>
+  </pre>
+  <p>
+    2017-10-23
+  </p>
+</div>
+<div>
+  <pre>
+    <code>
       年纪大了，喜欢有想法的人！
     </code>
   </pre>
@@ -79,6 +91,7 @@
     2017-10-22
   </p>
 </div>
+
 
         </section>
 
@@ -89,7 +102,7 @@
 
       </div>
     </div>
-
+    
 
   </body>
 </html>
