--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -50,6 +50,18 @@
 <div>
   <pre>
     <code>
+      架构演化：
+      组装 -> 分层
+      工具方法封装 -> 流程封装
+    </code>
+  </pre>
+  <p>
+    2017-10-23
+  </p>
+</div>
+<div>
+  <pre>
+    <code>
       年纪大了，喜欢有想法的人！
     </code>
   </pre>
