--- a/export/views/work/activity/index.html
+++ b/export/views/work/activity/index.html
@@ -166,6 +166,11 @@ so
 <li>导航页代码生成工具</li>
 </ul>
 
+<h3>配置流程</h3>
+
+<p><img src="../../../images/work/activity/flow_a332a644.png" alt="配置流程" title="" /></p>
+
+
 <h3>理想状态</h3>
 
 <p>一个综合性配置平台，涵盖和汇总以上功能</p>
