--- a/src/views/jottings/2017/index.html
+++ b/src/views/jottings/2017/index.html
@@ -69,6 +69,16 @@
     2017-10-22
   </p>
 </div>
+<div>
+  <pre>
+    <code>
+      像小学生一样去学习！
+    </code>
+  </pre>
+  <p>
+    2017-10-27
+  </p>
+</div>
 
 {% endblock %}
 
