--- a/export/views/jottings/2017/index.html
+++ b/export/views/jottings/2017/index.html
@@ -91,6 +91,16 @@
     2017-10-22
   </p>
 </div>
+<div>
+  <pre>
+    <code>
+      像小学生一样去学习！
+    </code>
+  </pre>
+  <p>
+    2017-10-27
+  </p>
+</div>
 
 
         </section>
