--- a/src/views/remark/2017/index.html
+++ b/src/views/remark/2017/index.html
@@ -54,6 +54,17 @@
   陨石坠落的速度是每秒十千米 我该用什么样的速度 才能将你拯救
   ——你的名字</code>
     </pre>
+    <pre>
+      <code>
+  林深时见鹿
+  海蓝时见鲸
+  梦醒时见你
+
+  人生没有重来
+  贪婪有何不可
+  我从未爱过这世界
+  我只喜欢你</code>
+    </pre>
 {% endblock %}
 
 {% block footer_extend %}
