--- a/export/views/remark/2017/index.html
+++ b/export/views/remark/2017/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
     <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-    
+
 <style media="screen">
   pre{
     margin: 0;
@@ -37,7 +37,7 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          
+
 <h5>追风筝的人</h5>
     <pre>
       <code>
@@ -76,7 +76,17 @@
   陨石坠落的速度是每秒十千米 我该用什么样的速度 才能将你拯救
   ——你的名字</code>
     </pre>
+    <pre>
+      <code>
+    林深时见鹿
+    海蓝时见鲸
+    梦醒时见你
 
+    人生没有重来
+    贪婪有何不可
+    我从未爱过这世界
+    我只喜欢你</code>
+    </pre>
         </section>
 
         <!-- <aside id="sidebar">
@@ -86,7 +96,7 @@
 
       </div>
     </div>
-    
+
 
   </body>
 </html>
