--- a/src/views/work/_layout.html
+++ b/src/views/work/_layout.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="../../../css/common/print.css" media="print" type="text/css">
     {% block head_extend %}{% endblock %}
     <title>ShellHong's Blog</title>
+    <style media="screen">
+      div{
+        line-height: 1.6;
+        padding-bottom: 6px;
+      }
+      blockquote{
+        margin-left: 0;
+        padding-left: 10px;
+      }
+    </style>
   </head>
   <body>
     <header>
