--- a/export/views/work/summary/index.html
+++ b/export/views/work/summary/index.html
@@ -70,18 +70,18 @@
             <div>
           <div>推动内部仓库使用，增加重要、高频功能与流程的封装，增加组件代码review，减少业务代码review。</div>
           <p>业务代码质量通过3各方面来保障，业务负责人review、测试环节检测、skynet平台监控。当然，组件和封装的加强，本身也是业务实现的重要保障和提升。</p>
-        </div>
-        </li>
+          </div>
+          </li>
           <li>提高效能
             <p>
           对高频的业务，采用自动化与可配置化方式落地，抽离开发与测试环节。提供丰富的工具与文档配套，辅助运营、测试和第三方cp完成整个流程，减少沟通成本。
-        </p>
-        </li>
+          </p>
+          </li>
           <li>关注质量
             <div>
           <div>项目质量全流程、整闭环跟进，不只是到测试环节，不只是解决redmine bug，线上的异常同样囊括在内。</div>
           增加线上监控，增加线上项目性能与异常日报邮件，并限期定位与解决，增加前端或与前端相关（客户的或后台）的线上埋点异常、功能异常等的定位渠道。
-        </div></li></ul></li>
+          </div></li></ul></li>
           </ul>
 
           <h3>对团队负责</h3>
@@ -122,11 +122,13 @@
           <h3>对自己负责</h3>
 
           <ul>
-          <li>阅读
+          <li>
+            <div>阅读</div>
           生命不止，阅读不息。今年下来，还是读了挺多书的。有技术博客、css揭秘、影响力、罗马人的故事、人工智能类的、团队带领类的、设计类的，杂七杂八，和往年比起来，算是一个进步点。</li>
-          <li>众师
+          <li>
+            <div>众师</div>
           不得不说，和有意思的人一起，是可以学习到东西的。只要肯学习，身边的人还是会有或多或少一些值得学习的地方。很幸运能时不时看透这一点，也很希望能找到更多有意思的人，学习和接触更多有意思的事。</li>
-          <li>博客
+          <li><div>博客</div>
           29岁生日前后，除了感慨：我X，又老了一岁！同时也决定做一些有意思的事情，于是有了自己的博客，并到目前为止，零零散散持续的更新着。</li>
           </ul>
 
