--- a/src/views/work/summary/index.html
+++ b/src/views/work/summary/index.html
@@ -91,11 +91,13 @@
 <h3>对自己负责</h3>
 
 <ul>
-<li>阅读
+<li>
+  <div>阅读</div>
 生命不止，阅读不息。今年下来，还是读了挺多书的。有技术博客、css揭秘、影响力、罗马人的故事、人工智能类的、团队带领类的、设计类的，杂七杂八，和往年比起来，算是一个进步点。</li>
-<li>众师
+<li>
+  <div>众师</div>
 不得不说，和有意思的人一起，是可以学习到东西的。只要肯学习，身边的人还是会有或多或少一些值得学习的地方。很幸运能时不时看透这一点，也很希望能找到更多有意思的人，学习和接触更多有意思的事。</li>
-<li>博客
+<li><div>博客</div>
 29岁生日前后，除了感慨：我X，又老了一岁！同时也决定做一些有意思的事情，于是有了自己的博客，并到目前为止，零零散散持续的更新着。</li>
 </ul>
 
