--- a/export/views/work/summary/index.html
+++ b/export/views/work/summary/index.html
@@ -35,7 +35,6 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-
           <h1>2017年终总结</h1>
 
           <blockquote>
@@ -126,7 +125,7 @@
           <li>
             <div>阅读</div>
           生命不止，阅读不息，这在我看来，是突破和提升自己的一个重要的方式。
-          <div>今年和往年相比，阅读量还是有所提升的，也略有所感。涉及的内容有点杂，但是也基本保障了技术、管理为主，其它为辅的主调。</div>
+          <div>今年和往年相比，阅读量还是有所提升的，也略有所感。涉及的内容有点杂，比例是否正确，尚待考量。</div>
           </li>
           <li>
             <div>众师</div>
@@ -247,7 +246,7 @@
 
           <h2>目标</h2>
 
-          <div>今年即将过去，未来的路该怎么走，方向何在！没办法一眼望穿，先定个基调，且行且变。</div>
+          <div>今年即将过去，未来的路该怎么走，方向何在！没办法一眼望穿，先根据现有不足，定个基调，且行且变。</div>
 
           <h3>个人</h3>
           <ul>
@@ -257,23 +256,60 @@
             <li>一定数量的源码阅读量</li>
             <li>一定数量的技术和其它文章的阅读量</li>
             <li>圈子扩大</li>
-            <li>更加努力（主动、目标明确），更加成熟（综合提升）</li>
+            <li>增加知识付费投入</li>
           </ul>
 
           <h3>团队</h3>
 
+          <h4>项目</h4>
+
           <ul>
-          <li>年初制定的okr不了了之（计划和变化，怎么揉合），找到更好的方式进行或者更好的替代方案</li>
-          <li>团队的稳定与激情怎么揉合</li>
-          <li>解决高级人才缺失问题</li>
-          <li>继续推动团队分享、技能提升
-            <ul>
-              <li>项目级别分享：一种新类型项目，至少对应一次分享</li>
-              <li>仓库组件分享：优秀组件和流程封装分享</li>
-              <li>技能提升目标制定</li>
-            </ul>
-          </li>
-          <li>部分旧项目升级</li>
+          <li>效能提升
+          <ul><li>完善和持续推进模块、流程封装与分层架构</li>
+          <li>保证较高的文档覆盖</li>
+          <li>难点项目切入门槛降低和效率提升（第一点做基础，第二点屏蔽盲区和保障细节）</li>
+          <li>50%的项目实现细粒度并行开发（一个页面，多人开发，而不是一人一个页面的程度）</li></ul></li>
+          <li>技术突破
+          <ul><li>实现一次或以上技术推动项目落地，例如
+          <ul><li>活动形式突破预研（SVG动画、陀螺仪、WebGL等）</li></ul></li>
+          <li>H5体验提升，例如
+          <ul><li>PWA部分特性落地（如果之前的异常问题解决并已覆盖的化）</li>
+          <li>直达服务改造落地</li>
+          <li>重要项目性能指标提升（上线前性能报告，上线后线上监控）</li></ul></li></ul></li>
+          <li>对外输出
+          <ul><li>一次或以上公司级别项目奖项获得</li></ul></li>
+          </ul>
+
+          <h4>氛围</h4>
+
+          <ul>
+          <li>寻找鲶鱼，步骤如下
+          <ul><li>自己充当</li>
+          <li>推动和培养合适的人员</li>
+          <li>招聘符合的人员</li></ul></li>
+          <li>增加设定
+          <ul><li>除了产品预期，增加技术和团队预期，例如
+          <ul><li>可复用或借鉴于其它项目</li>
+          <li>具备可分享输出</li></ul></li>
+          <li>增加明确的技术性任务列表，例如
+          <ul><li>预研某技术，并分享</li>
+          <li>封装某功能、模块、流程，并输出到内部仓库</li>
+          <li>团队代码review，并具正面意义</li>
+          <li>工程化加强，并输出分享或脚手架工具</li></ul></li></ul></li>
+          <li>技术交流
+          <ul><li>基础要求
+          <ul><li>新型项目，必须对应一次分享或交流</li>
+          <li>内部仓库优秀实现分享与交流</li></ul></li>
+          <li>频率
+          <ul><li>一个月一次</li>
+          <li>每人至少一次</li>
+          <li>部门级两个月至少一次</li>
+          <li>跨部门级每年2次以上</li></ul></li></ul></li>
+          <li>增加团队性质活动频率，例如
+          <ul><li>一起参与分享、讲座、课程等</li>
+          <li>头脑风暴</li>
+          <li>常规交流</li>
+          <li>对外活动</li></ul></li>
           </ul>
 
         </section>
