添加配置平台ppt

--- a/src/views/work/summary/index.html
+++ b/src/views/work/summary/index.html
@@ -181,6 +181,7 @@
     <li>可配置，保障了较高的效能</li>
     <li>2个项目（内部数据平台和积分管理模块）使用到该架构，以后会更多</li>
   </ul>
+<p><a target='_blank' href="http://blog.shellhong.com/resources/通用后台模板系统.pptx">点击了解更多</a></p>
 
 <p><h3>监控平台</h3>
 skynet监控平台的开发和上线，让我们有渠道去更加关注线上（定位线上问题、查看线上性能和异常、每日邮件汇总前端项目相关数据等）。</p>
