--- a/export/views/work/summary/index.html
+++ b/export/views/work/summary/index.html
@@ -58,7 +58,7 @@
           <p>这一年的时间里，其实于我个人而言，努力的方向主要是以下两点</p>
 
           <ul>
-          <li>业务抽离
+          <li>业务调整
           <div>不再花费大量的精力投入具体的业务实现，而是</div>
 
           <ul><li>推动业务负责人的落地和备份</li>
@@ -72,9 +72,9 @@
           <p>业务代码质量通过3各方面来保障，业务负责人review、测试环节检测、skynet平台监控。当然，组件和封装的加强，本身也是业务实现的重要保障和提升。</p>
           </div>
           </li>
-          <li>提高效能
+          <li>加强可配置化实现
             <p>
-          对高频的业务，采用自动化与可配置化方式落地，抽离开发与测试环节。提供丰富的工具与文档配套，辅助运营、测试和第三方cp完成整个流程，减少沟通成本。
+          对部分高频的业务，推动采用自动化与可配置化方式落地，抽离开发与测试环节。提供丰富的工具与文档配套，辅助运营、测试和第三方cp完成整个流程，减少沟通成本。
           </p>
           </li>
           <li>关注质量
@@ -109,7 +109,7 @@
 
           <ul>
           <li>评级
-          <ul><li>努力保障和争取自己和组员评级的合理性</li>
+          <ul>
           <li>积极参与标准制定和评委工作</li></ul></li>
           <li>技术支撑
           <ul><li>校招笔试题输出</li>
@@ -137,9 +137,14 @@
           </ul>
 
           <h3>总结</h3>
-          总的来说，基本是朝着：每年都有新变化，新突破在努力，尽量避免一味忙碌，没有想法，没有改变；
-          <div>基本做到了，无论是生活还是工作，都不是索然无味的；</div>
-          <div>不足的地方有很多，性格使然，能力使然，时刻警惕。</div>
+          总的来说，基本是朝着以下几点努力
+          <ul>
+          <li>做一个有技术追求的开发</li>
+          <li>做一个高效的工作者</li>
+          <li>做一个能推动团队前进的管理者</li>
+          <li>做一个有想法的自己</li>
+          </ul>
+          <div>有进步也有遗憾，不足的地方有很多，性格使然，能力使然，需再接再厉。</div>
 
           <h2>团队</h2>
 
@@ -147,9 +152,8 @@
 
           <ul>
           <li>一如既往支撑部门前端项目</li>
-          <li>一如既往优先定位问题所在</li>
-          <li>一往无前引进优先技术落地</li>
-          <li>有惊无险度过这忙碌的一年</li>
+          <li>一往无前引进合适技术并落地</li>
+          <li>在效率和质量方面做了诸多尝试，成效显著</li>
           </ul>
 
           <h3>列举典型</h3>
@@ -213,7 +217,7 @@
               <li>2个项目（内部数据平台和积分管理模块）使用到该架构，以后会更多</li>
             </ul>
           <p><a target='_blank' href="http://blog.shellhong.com/resources/通用后台模板系统.pptx">点击了解更多</a></p>
-          
+
           <p><h3>监控平台</h3>
           skynet监控平台的开发和上线，让我们有渠道去更加关注线上（定位线上问题、查看线上性能和异常、每日邮件汇总前端项目相关数据等）。</p>
 
@@ -230,7 +234,7 @@
           <li>没有监控，你不会想象得到，你所信赖的客户端，各个接口会时不时报一下错</li>
           <li>没有skynet，当后台找过来说，你的接口调用有问题，你都无力反驳，无从下手</li></ul></li></ul>
 
-          <p>所以，利用skynet平台，2017年，我们主要做了</p>
+          <p>所以，依托skynet平台，2017年，我们主要做了</p>
 
           <ul><li>解决每日性能和异常邮件中，数量级达到100个以上的异常（该解决的解决，该反馈的反馈）</li>
           <li>定位测试环境中不可重现的问题，并做处理</li>
@@ -242,7 +246,7 @@
 
 
           <h3>总结</h3>
-          <div>上面列举了那么几个例子，当然还有一些没提及，例如内部仓库和前端wiki文档的完善，这些和往年比都算是一种进步。</div>
+          <div>上面列举了几个例子，当然还有一些没提及，例如内部仓库和前端wiki文档的完善，这些和往年比都算是一种进步。</div>
           特别是这些有意义的事情，是我们在不影响任何需求排期的情况下做出来的，是可以有一种淡淡的自豪感的。
 
           <h2>目标</h2>
@@ -268,14 +272,13 @@
           <li>效能提升
           <ul><li>完善和持续推进模块、流程封装与分层架构</li>
           <li>保证较高的文档覆盖</li>
-          <li>难点项目切入门槛降低和效率提升（第一点做基础，第二点屏蔽盲区和保障细节）</li>
-          <li>50%的项目实现细粒度并行开发（一个页面，多人开发，而不是一人一个页面的程度）</li></ul></li>
+          <li>难点项目切入门槛降低和效率提升</li>
+          <li>开发协作优化（较细粒度的分模块并行开发、彼此项目了解度提升等）</li></ul></li>
           <li>技术突破
-          <ul><li>实现一次或以上技术推动项目落地，例如
-          <ul><li>活动形式突破预研（SVG动画、陀螺仪、WebGL等）</li></ul></li>
           <li>H5体验提升，例如
           <ul><li>PWA部分特性落地（如果之前的异常问题解决并已覆盖的化）</li>
           <li>直达服务改造落地</li>
+          <li>活动形式突破预研（SVG动画、陀螺仪、WebGL等）</li>
           <li>重要项目性能指标提升（上线前性能报告，上线后线上监控）</li></ul></li></ul></li>
           <li>对外输出
           <ul><li>一次或以上公司级别项目奖项获得</li></ul></li>
