--- a/export/views/work/summary/index.html
+++ b/export/views/work/summary/index.html
@@ -275,11 +275,15 @@
           <li>难点项目切入门槛降低和效率提升</li>
           <li>开发协作优化（较细粒度的分模块并行开发、彼此项目了解度提升等）</li></ul></li>
           <li>技术突破
-          <li>H5体验提升，例如
-          <ul><li>PWA部分特性落地（如果之前的异常问题解决并已覆盖的化）</li>
-          <li>直达服务改造落地</li>
-          <li>活动形式突破预研（SVG动画、陀螺仪、WebGL等）</li>
-          <li>重要项目性能指标提升（上线前性能报告，上线后线上监控）</li></ul></li></ul></li>
+          <ul>
+            <li>H5体验提升，例如
+              <ul><li>PWA部分特性落地（如果之前的异常问题解决并已覆盖的化）</li>
+              <li>直达服务改造落地</li>
+              <li>活动形式突破预研（SVG动画、陀螺仪、WebGL等）</li>
+              <li>重要项目性能指标提升（上线前性能报告，上线后线上监控）</li></ul>
+            </li>
+          </ul>
+          </li>
           <li>对外输出
           <ul><li>一次或以上公司级别项目奖项获得</li></ul></li>
           </ul>
