--- a/export/views/remark/2017/index.html
+++ b/export/views/remark/2017/index.html
@@ -89,7 +89,8 @@
     </pre>
   <pre>
     <code>
-  志向所趋，无远弗届，穷山距海，不能限也。</code>
+  志之所趋,无远弗届；穷山距海,不能限也.
+  志之所向,无坚不入；锐兵精甲,不能御也.</code>
   </pre>
         </section>
 
