--- a/src/views/remark/2017/index.html
+++ b/src/views/remark/2017/index.html
@@ -65,6 +65,11 @@
   我从未爱过这世界
   我只喜欢你</code>
     </pre>
+    <pre>
+      <code>
+  志之所趋,无远弗届；穷山距海,不能限也.
+  志之所向,无坚不入；锐兵精甲,不能御也.</code>
+    </pre>
 {% endblock %}
 
 {% block footer_extend %}
